Refactor time-related methods to use the java.time API instead of long magic